--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/jest": "^29.5.7",
     "@types/node": "^22.5.5",
     "aws-cdk": "^2.185.0",
-    "esbuild": "0.25.1",
+    "esbuild": "^0.25.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
