update project name and licens

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "couchbase-eks",
+  "name": "aws-cdk-workshop",
   "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
